--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.1",
     "autoprefixer": "^10.1.0",
     "next": "^10.2.0",
     "postcss": "^8.2.1",
