--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.1",
     "autoprefixer": "^10.1.0",
+    "heroicons": "^1.0.1",
     "next": "^10.2.0",
     "postcss": "^8.2.1",
     "react": "17.0.1",
