--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "dependencies": {
     "@heroicons/react": "^1.0.1",
     "autoprefixer": "^10.1.0",
-    "heroicons": "^1.0.1",
     "next": "^10.2.0",
+    "next-fonts": "^1.5.1",
     "postcss": "^8.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^2.0.2",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
+    "gsap": "^3.5.1",
+    "node-sass": "^4.14.1"
   }
 }
